padding removed, icon fixed, visibility for nav-list changed

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -41,7 +41,6 @@ nav {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
-  padding: 16px 0;
 }
 .menu-icon {
   stroke: #0c0c0c;
@@ -49,16 +48,15 @@ nav {
 .tab-menu-icon {
   position: absolute;
   opacity: 0;
-  visibility: hidden;
+  display: none;
   pointer-events: none;
 }
 .nav-list {
-  display: flex;
+  display: none;
   align-items: center;
   gap: 40px;
   position: absolute;
   opacity: 0;
-  visibility: hidden;
   pointer-events: none;
 }
 .nav-item {
@@ -224,7 +222,9 @@ nav {
   }
   .tab-menu-icon {
     opacity: 1;
-    visibility: visible;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     pointer-events: auto;
     position: static;
   }
@@ -264,7 +264,6 @@ nav {
     display: flex;
     gap: 40px;
     opacity: 1;
-    visibility: visible;
     pointer-events: auto;
     position: static;
   }
